Bug 78241 - FILEOPEN PDF Import: Dashes are not supported
Summary: FILEOPEN PDF Import: Dashes are not supported
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: vvort
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-04 05:39 UTC by vvort
Modified: 2014-05-06 15:22 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Test file (PDF) (1.13 KB, application/pdf)
2014-05-04 05:39 UTC, vvort
Details
Test file (SVG) (5.82 KB, image/svg+xml)
2014-05-04 05:40 UTC, vvort
Details

Note You need to log in before you can comment on or make changes to this bug.
Description vvort 2014-05-04 05:39:35 UTC
Created attachment 98399 [details]
Test file (PDF)

Open PDF test file with LibreOffice Draw and you will see that line styles are all almost the same.
Comment 1 vvort 2014-05-04 05:40:13 UTC
Created attachment 98400 [details]
Test file (SVG)
Comment 2 vvort 2014-05-04 05:54:47 UTC
Fixed here:
https://gerrit.libreoffice.org/9246
Comment 3 Commit Notification 2014-05-06 15:08:41 UTC
Vort committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b27fca822cd6f40c8a7e56fe56fdf76bdc0dd159

fdo#78241 PDF Import: add dashes support



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.