fdo#78241 PDF Import: add dashes support

Change-Id: Ifd9fbce44c7d18114d5be466bfb9d92192573205
Reviewed-on: https://gerrit.libreoffice.org/9246
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>